--- a/vers_1/docker-compose.yml
+++ b/vers_1/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   web:
-    build: .
+    image: flask-redis-ap
     ports:
       - "5000:5000"
     environment:
@@ -10,8 +10,14 @@ services:
       - REDIS_PORT=6379
     depends_on:
       - redis
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
 
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
+    deploy:
+      replicas: 1
